--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -14,88 +14,105 @@
     android:orientation="vertical"
     android:background="@color/backgroundDark">
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/ic_launcher"
-            android:id="@+id/Movie_ImageView"
-            android:layout_weight="1"/>
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:orientation="vertical">
 
-            <TextView
-                android:text="@string/plot"
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@mipmap/ic_launcher"
+                    android:id="@+id/Movie_ImageView"
+                    android:layout_weight="1"/>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:text="@string/plot"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/plotTitleTextView"
+                        android:textSize="@dimen/plot_title"
+                        android:textColor="@color/colorAccent"
+                        android:paddingLeft="@dimen/movie_detail"
+                        android:paddingTop="@dimen/plot_padding"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/plotTextView"
+
+                        android:textColor="@android:color/secondary_text_dark"
+                        android:padding="@dimen/movie_detail"
+                        />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/plotTitleTextView"
-                android:textSize="20sp"
-                android:textColor="@color/colorAccent"
-                android:paddingLeft="10dp"
-                android:paddingTop="20dp"/>
+                >
 
-            <TextView
+                <TextView
+                    android:text="@string/release_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/ReleaseTitleTextView"
+                    android:textColor="@color/colorAccent"
+                    android:padding="@dimen/movie_detail"/>
+
+                <TextView
+                    tools:text="@string/date_tool"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/ReleaseTextView"
+                    android:layout_weight="1"
+                    android:padding="@dimen/movie_detail"
+                    android:textColor="@android:color/primary_text_dark"/>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/plotTextView"
+                >
 
-                android:textColor="@android:color/secondary_text_dark"
-                android:padding="10dp"
-                />
+                <TextView
+                    android:text="@string/rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/RatingTitleTextView"
+                    android:textColor="@color/colorAccent"
+                    android:padding="@dimen/movie_detail"/>
+
+                <TextView
+                    tools:text="@string/rating_tool"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/RatingTextView"
+                    android:layout_weight="1"
+                    android:padding="@dimen/movie_detail"
+                    android:textColor="@android:color/primary_text_dark"/>
+            </LinearLayout>
+
+
         </LinearLayout>
+    </ScrollView>
 
-    </LinearLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-
-        <TextView
-            android:text="@string/release_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/ReleaseTitleTextView"
-            android:textColor="@color/colorAccent"
-            android:padding="10dp"/>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/ReleaseTextView"
-            android:layout_weight="1"
-            android:padding="10dp"
-            android:textColor="@android:color/primary_text_dark"/>
-    </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-
-        <TextView
-            android:text="@string/rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/RatingTitleTextView"
-            android:textColor="@color/colorAccent"
-            android:padding="10dp"/>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/RatingTextView"
-            android:layout_weight="1"
-            android:padding="10dp"
-            android:textColor="@android:color/primary_text_dark"/>
-    </LinearLayout>
 </LinearLayout>
