--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="movie_detail">10dp</dimen>
+    <dimen name="plot_title">20sp</dimen>
+    <dimen name="plot_padding">20dp</dimen>
 </resources>
