--- a/app/src/main/res/layout/movie_listview_row.xml
+++ b/app/src/main/res/layout/movie_listview_row.xml
@@ -3,7 +3,8 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+              android:layout_height="wrap_content"
+              android:clickable="true">
 
     <ImageView
         android:layout_width="0dp"
@@ -11,8 +12,7 @@
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/Movie_ImageView"
         android:layout_weight="1"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
         android:adjustViewBounds="true"
-        android:scaleType="fitCenter"/>
+        android:scaleType="fitCenter"
+        android:padding="5dp"/>
 </LinearLayout>
