Added new adapters for trailers/reviews. Made the async task some what adaptable by converting it to a gneric class

--- a/app/src/main/res/layout/movie_listview_row.xml
+++ b/app/src/main/res/layout/movie_listview_row.xml
@@ -13,6 +13,5 @@
         android:id="@+id/Movie_ImageView"
         android:layout_weight="1"
         android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        android:padding="5dp"/>
+        android:scaleType="fitXY"/>
 </LinearLayout>
