--- a/app/src/main/res/menu/sort_by.xml
+++ b/app/src/main/res/menu/sort_by.xml
@@ -12,6 +12,9 @@
             <item
                 android:id="@+id/menuSortRating"
                 android:title="@string/rating" />
+            <item
+                android:id="@+id/menuSortFavourite"
+                android:title="@string/favourites" />
         </group>
 
 </menu>
